# LyricLens

./: .gitattributes  .gitignore  LyricLens-frontend-demo-neon.html  LyricLens-功能规格文档-v1.3-FINAL.md  NOTICES.md  README.en.md  README.md  main.js  manifest.json  package.json
cloudflare-worker/: deploy.sh  worker.js  wrangler.toml
companion/src/: index.html  main.js  styles.css
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/src/: lib.rs  main.rs
docs/: detached-window-feasibility.md
docs/demos/: ui-demo-v2.html
docs/roadmap/: README.md  probe-a-updater.md  probe-b-storage.md  probe-c-cloudflare.md  progress.md
docs/schema/: cefrj-vocab.md  en-exam-vocab.md  jlpt-vocab.md  notebook-entry.md
probes/storage-probe/: LyricLensStorageProbe.plugin  build.ps1  manifest.json  probe.js  (+2 more)
scripts/: build-plugin.ps1  preprocess-cefrj.mjs  preprocess-enexam.mjs  preprocess-jlpt.mjs
src/: api.js  bridge.js  cache.js  capture.js  card.js  detect.js  diagnostics.js  dicts.js  lyrics.js  ncmLyricApi.js  panel.js  settings.js  styles.js  sync.js  updater.js  utils.js
styles/: panel.css
tests/: api.test.js  bridge.test.js  cache-sync.test.js  capture.test.js  card-render.test.js  companion_stub.js  detect.test.js  diagnostics.test.js  dicts.test.js  lyrics.test.js  main-flow.test.js  manifest.test.js  manual-auto-follow.test.js  ncm-lyric-api.test.js  panel-debug.test.js  panel-render.test.js  panel-state.test.js  settings.test.js  smoke.test.js  sync.test.js  utils.test.js
(+5 files in other folders)
