[package]
name = "lyriclens-companion"
version = "0.1.0"
edition = "2021"
description = "LyricLens desktop overlay companion"
authors = ["Yoru"]

[lib]
name = "lyriclens_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
